# DeCloud

./: .flake  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  config.toml  docker-compose-infra.yaml  pyproject.toml  requirements.txt  setup.py
RestApi/: .env.sample
RestApi/Prediction/: models.py  readers.py  serializers.py  urls.py  views.py
RestApi/RestApi/: asgi.py  settings.py  urls.py  wsgi.py
alembic/: alembic.ini  env.py
alembic/versions/: 2025-05-01_0_init.py
backend_context/containers/: api_container.py
backend_context/entrypoints/: api.py
backend_context/persistent/pg/: api.py
backend_context/presentation/: app.py
backend_context/repositories/: api_repository.py  s3_repository.py
backend_context/schemas/: api_schemas.py
backend_context/services/: api_service.py
backend_context/suppliers/: s3_supplier.py
base/: exceptions.py  log_context.py  logger.py  settings.py
base/infrastructure/http/: session.py
base/infrastructure/pg/: client.py
base/infrastructure/rabbit/: session.py
base/infrastructure/s3/: session.py
base/persistent/pg/: base.py
base/presentation/: runner.py
base/presentation/rabbit/: rabbit_queues.py
base/presentation/rest/: app.py  exceptions.py  uvicorn.py
base/schemas/: base.py
base/utils/: datetime_utils.py  json.py
decloud/: .env.sample  __init__.py  manage.py
decloud/api/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  serializers.py  urls.py  utils.py  views.py
decloud/api/migrations/: 0001_initial.py  0002_alter_file_user.py  0003_alter_file_user.py  0004_alter_file_user.py  0005_alter_file_user.py  0006_alter_file_user.py  0007_alter_file_user.py  0008_alter_file_user.py  0009_alter_file_user.py  0010_imagetoload_delete_file.py  0011_remove_imagetoload_optical_s3_link_and_more.py
decloud/api/ml/: __init__.py  model.py  preprocessing.py
decloud/api/mock/: apps.py  urls.py  views.py
decloud/api/routers/: get_image.py  mock.py  presigned_url.py  status.py  upload.py
decloud/core/: manager.py  models.py  serializers.py
decloud/core/migrations/: 0001_initial.py
decloud/decloud/: asgi.py  settings.py  urls.py  wsgi.py
functions/check-task-status/: index.py
functions/cleanup-files/: index.py
functions/generate-presigned-url/: index.py
functions/process-file/: index.py
neuro_api_context/: settings.py
neuro_api_context/containers/: base.py  neuro_api_container.py
neuro_api_context/db/: ImageToProcess.py
neuro_api_context/entrypoints/: neuro_api.py
neuro_api_context/presentation/: app.py  runner.py
neuro_api_context/presentation/ml/: model.py
neuro_api_context/presentation/rabbit/: app.py
neuro_api_context/repositories/: db_repository.py  s3_repository.py
neuro_api_context/services/: image_processing_service.py  ml_evaluator.py  neuro_api_service.py  postprocessing.py  preprocessing.py
requirements/: production.txt
resources/: key.txt
severless-functions/: index.py
